All products listed

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 
 <body>
   <root></root>
+
+
+  <script src="https://kit.fontawesome.com/539ca2bec4.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
